Fixed sticky contact, fixed overlap of main pic
Notes:
Contact form - Removed fixed position (was causing the form to be half hidden and static on smaller screens)
Contact form - After fixed was removed, contact went left. Centered it by adjusting left margin.

Nav bar/Pic - Overlap was occuring. Added padding to scoot picture down. Gradient change not as good on smaller monitors, Diana's idea is to wrap into @media tag and adjust for screen size when gradient flow is no longer perfect

--- a/teststyle.css
+++ b/teststyle.css
@@ -5,6 +5,7 @@
 /* creates gradient fade from the nav bar down */
 .topHalf {
 	margin-top: 5%;
+	padding-top: 3%;			/* compensate for static nav bar, prevent overlap */
   	background-image: -webkit-gradient(
 	linear,
 	left bottom,
@@ -393,7 +394,6 @@ h3, h4{
 }
 
 #send-message {
-	position: fixed;
 	font-size: 100%;
 	color: #804C00;
 	font-family: 'oswald', sans-serif;
@@ -402,7 +402,7 @@ h3, h4{
 	left: 23%;
 	right: 23%;
 	margin-right: 1.5em;
-	margin-left: 1.5em;
+	margin-left: 30%;	/* centered it, now that "fixed" position is removed */
 	height: auto;
 	padding: 1em;
 	margin-top: 2em;
